package org.example.city.enums;

public enum Architecture {
    БАРОККО,
    МОДЕРН
}
