package org.example.city.enums;

public enum Mastery {
    MASTERFULL,
    LOW
}
