package org.example.interfaces;

public interface HasCases {
    String dativeCase();
    String genetiveCase();
}
