package org.example.interfaces;

public interface Plurable {
    String getPluralName();
    String getSingularName();
}
