@startuml
enum org.example.city.enums.Mastery {
+  MASTERFULL
+  LOW
}
class org.example.characters.AncientSculptors {
- String pluralName
- String dativeName
- String genetiveName
- String singularName
+ String tell(String)
+ String getPluralName()
+ String dativeCase()
+ String genetiveCase()
+ String getSingularName()
+ String toString()
+ boolean equals(Object)
}
class org.example.characters.Lake {
- String dativeName
- String genetiveName
+ String suggest(Boolean)
+ String dativeCase()
+ String genetiveCase()
+ String toString()
+ boolean equals(Object)
}
interface org.example.interfaces.Plurable {
~ String getPluralName()
~ String getSingularName()
}
interface org.example.interfaces.HasCases {
~ String dativeCase()
~ String genetiveCase()
}
enum org.example.city.enums.Architecture {
+  БАРОККО
+  МОДЕРН
}
class org.example.characters.Specialists {
- String pluralName
- String dativeName
- String genetiveName
- String singularName
+ String took(String)
+ String getPluralName()
+ String dativeCase()
+ String genetiveCase()
+ String getSingularName()
+ String toString()
}
class org.example.characters.Shoggots {
- String pluralName
- String dativeName
- String genetiveName
- String singularName
+ String obey()
+ String achieve(String)
+ String mimicVoices(String)
+ String liftAndDragRocks()
+ String getPluralName()
+ String dativeCase()
+ String genetiveCase()
+ String getSingularName()
+ String toString()
+ boolean equals(Object)
}
class org.example.characters.Builders {
- String pluralName
- String dativeName
- String genetiveName
- String singularName
+ String useNewTechs(String)
+ String getPluralName()
+ String dativeCase()
+ String genetiveCase()
+ String getSingularName()
+ String toString()
+ boolean equals(Object)
}
abstract class org.example.characters.abstraction.Characters {
- String name
+ void setName(String)
+ String getName()
+ String toString()
+ boolean equals(Object)
+ int hashCode()
}
class org.example.city.City {
- String pluralName
- String dativeName
- String genetiveName
- String singularName
- String name
- Architecture style
- Mastery mastery
+ String compareStyle(City)
+ String compareMastery(City)
+ Architecture getStyle()
+ void setStyle(Architecture)
+ Mastery getMastery()
+ void setMastery(Mastery)
+ String getName()
+ void setName(String)
+ String toString()
+ boolean equals(Object)
+ int hashCode()
+ String dativeCase()
+ String genetiveCase()
+ String getPluralName()
+ String getSingularName()
}
class org.example.characters.Phosphorescents {
- String pluralName
- String dativeName
- String genetiveName
- String singularName
- boolean lighting
+ void light()
+ String getLighting()
+ String getPluralName()
+ String dativeCase()
+ String genetiveCase()
+ String getSingularName()
+ String toString()
+ boolean equals(Object)
}
class org.example.characters.Elders {
- String pluralName
- String dativeName
- String genetiveName
- String singularName
+ String enstablish(String)
+ String invite(String)
+ String getPluralName()
+ String dativeCase()
+ String genetiveCase()
+ String getSingularName()
+ String toString()
+ boolean equals(Object)
}
class org.example.App {
+ {static} void main(String[])
}


org.example.interfaces.Plurable <|.. org.example.characters.AncientSculptors
org.example.characters.abstraction.Characters <|-- org.example.characters.AncientSculptors
org.example.characters.abstraction.Characters <|-- org.example.characters.Lake
org.example.interfaces.Plurable <|.. org.example.characters.Specialists
org.example.characters.abstraction.Characters <|-- org.example.characters.Specialists
org.example.interfaces.Plurable <|.. org.example.characters.Shoggots
org.example.characters.abstraction.Characters <|-- org.example.characters.Shoggots
org.example.interfaces.Plurable <|.. org.example.characters.Builders
org.example.characters.abstraction.Characters <|-- org.example.characters.Builders
org.example.interfaces.HasCases <|.. org.example.characters.abstraction.Characters
org.example.interfaces.Plurable <|.. org.example.city.City
org.example.interfaces.HasCases <|.. org.example.city.City
org.example.interfaces.Plurable <|.. org.example.characters.Phosphorescents
org.example.characters.abstraction.Characters <|-- org.example.characters.Phosphorescents
org.example.interfaces.Plurable <|.. org.example.characters.Elders
org.example.characters.abstraction.Characters <|-- org.example.characters.Elders
@enduml